# cloudsell-task

./: README.md  main.py  pyproject.toml  ruff.toml
deploy/: docker-compose.redis.yml  docker-compose.yml  entrypoint.sh
deploy/dev/: Dockerfile.dev
deploy/prod/: Dockerfile.prod
src/app/application/common/dto/: orders.py  pricing_plans.py
src/app/application/common/ports/: __init__.py  api_client.py  orders_gateway.py  uuid_generator.py
src/app/application/interactors/: __init__.py  get_order.py  new_orders.py  pricing_plans.py
src/app/application/services/: complete_order.py
src/app/domain/entities/: __init__.py  orders.py  pricing_plans.py
src/app/infrastructure/adapters/: __init__.py
src/app/infrastructure/adapters/application/: api_clients.py  orders_gateway.py  uuid_generator.py
src/app/infrastructure/common/config/: config.py  constants.py
src/app/main/: bootstrap.py  main.py
src/app/main/ioc/: __init__.py  application.py  infrastructure.py  settings.py
src/app/presentation/http/common/: request_model.py  response_model.py
src/app/presentation/http/controllers/: root_router.py
src/app/presentation/http/controllers/healthcheck/: livness.py  readiness.py  router.py
src/app/presentation/http/controllers/v1/: orders.py  pricing_plans.py  router.py
src/resources/fake_provider_data/: provider_a.json  provider_b.json
tests/: test_application.py  test_controllers.py  test_infrastructure.py
